优化批量发送，设置最大发送阈值

--- a/test.properties
+++ b/test.properties
@@ -16,10 +16,11 @@ restart.interval=10000
 #TODO clickhouse??
 clickhouse.user=ess
 clickhouse.passwd=ess@123
-clickhouse.database=ess_dwd
-clickhouse.table=cl_all
-clickhouse.conn=jdbc:clickhouse://test01:8123,test02:8123,test03:8123
+clickhouse.database=ids_test
+clickhouse.table=cl_test
+clickhouse.conn=jdbc:clickhouse://test01:8123
 clickhouse.maxRetries=3
+clickhouse.batchSizeLimit=3
 
 #TODO ????
 window.size=2
