增加脏数据过滤

--- a/test.properties
+++ b/test.properties
@@ -1,8 +1,8 @@
 #TODO kafka??
-kafka.bootstrap.servers=test01:6667,test02:6667,test03:6667
-kafka.topic=ess-dwd-cluster-02
-kafka.enable.auto.commit=true
-kafka.consumer.groupid=ess_dwd_cluster_02_dev_0802
+kafka.bootstrap.servers=cn-cdh03:6667,cn-cdh04:6667,cn-cdh05:6667
+kafka.topic=ess-ods-cluster-all
+kafka.enable.auto.commit=false
+kafka.consumer.groupid=ods-cl-prod
 kafka.auto.offset.reset=earliest
 
 #TODO checkpoint??
@@ -22,6 +22,6 @@ clickhouse.conn=jdbc:clickhouse://test01:8123
 clickhouse.maxRetries=3
 
 #TODO ????
-window.size=50
+window.size=1
 clickhouse.stringTypes=String,Date,DateTime
-
+check.field=cTime,essCode
