暂存，mqtt协议数据入库

--- a/test.properties
+++ b/test.properties
@@ -1,10 +1,9 @@
 #TODO kafka??
-kafka.bootstrap.servers=cn-cdh03:6667,cn-cdh04:6667,cn-cdh05:6667
-kafka.topic=ess-ods-cluster-all
+kafka.bootstrap.servers=test01:6667,test02:6667,test03:6667
+kafka.topic=summaryInfo
 kafka.enable.auto.commit=false
-kafka.consumer.groupid=ods-cl-prod
+kafka.consumer.groupid=test
 kafka.auto.offset.reset=earliest
-
 #TODO checkpoint??
 flink.env=test
 checkpoint.path=hdfs://hdfscluster:8020/flink/chuneng/dwd
@@ -12,16 +11,13 @@ checkpoint.interval=5000
 checkpoint.timeout=60000
 restart.num=3
 restart.interval=10000
-
 #TODO clickhouse??
 clickhouse.user=ess
 clickhouse.passwd=ess@123
-clickhouse.database=ids_test
-clickhouse.table=cl_test
+clickhouse.database=mqtt_info
 clickhouse.conn=jdbc:clickhouse://test01:8123
 clickhouse.maxRetries=3
-
 #TODO ????
 window.size=1
 clickhouse.stringTypes=String,Date,DateTime
-check.field=cTime,essCode
+kafkatock.path=F:\\chuneng\\kafkatock\\kafkatock.txt
