--- a/test.properties
+++ b/test.properties
@@ -1,6 +1,6 @@
 #TODO kafka??
 kafka.bootstrap.servers=test01:6667,test02:6667,test03:6667
-kafka.topic=summaryInfo
+kafka.topic=pcsInfo,summaryInfo,bmsInfo,chargerInfo,airconInfo,THSensorInfo,leakageInfo,IOInfo
 kafka.enable.auto.commit=false
 kafka.consumer.groupid=test
 kafka.auto.offset.reset=earliest
@@ -18,6 +18,6 @@ clickhouse.database=mqtt_info
 clickhouse.conn=jdbc:clickhouse://test01:8123
 clickhouse.maxRetries=3
 #TODO ????
-window.size=2
+window.size=1
 clickhouse.stringTypes=String,Date,DateTime
 kafkatock.path=F:\\chuneng\\kafkatock\\kafkatock.txt
